--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         <div class="row mb-5">
 
-            <div class="col-sm-6 col-md-4 mb-3">
+            <div class="col-md-4 mb-3">
 
                 <nav id="navbarVertical" class="navbar navbar-light bg-light">
                     
@@ -185,7 +185,7 @@
 
             </div>
             
-            <div class="col-sm-6 col-md-8">
+            <div class="col-sm-6 col-md-4 mb-2">
 
                 <div data-spy="scroll" data-target="#navbarVertical" data-offset="0" class="scrollspySite">
 
@@ -308,6 +308,7 @@
     </div>
 
     <div class="jumbotron jumbotron-fluid">
+
         <div class="container">
 
             <div class="row">
@@ -321,7 +322,94 @@
 
             </div>
 
+            <div class="row">
+
+                <div class="col-12">
+
+                    <ul class="nav nav-pills justify-content-center mb-3" id="pill-nav" role="tablist">
+
+                        <li nav-item>
+                            <a class="nav-link" id="nav-pills-01" data-toggle="pill" href="#nav-item-01">Vivamus</a>
+                        </li>
+
+                        <li nav-item>
+                            <a class="nav-link" id="nav-pills-02" data-toggle="pill" href="#nav-item-02">Curabitur</a>
+                        </li>
+
+                        <li nav-item>
+                            <a class="nav-link" id="nav-pills-03" data-toggle="pill" href="#nav-item-03">Aenean</a>
+                        </li>
+
+                    </ul>
+
+                    <div class="tab-content" id="nav-pills-content">
+
+                        <div class="tab-pane fade show active" id="nav-item-01" role="tabpanel">
+
+                            <div class="row">
+
+                                <div class="col-sm-6">
+
+                                    <div class="embed-responsive embed-responsive-4by3">
+                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jOQMJKiRcVc?list=RDjOQMJKiRcVc"></iframe>
+                                    </div>
+
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <p> Morbi euismod tempor diam, et mollis turpis mattis sit amet. Ut vehicula, mauris sit amet tempor sodales, magna odio tincidunt mi, et scelerisque nunc tortor vitae turpis. Ut pretium eros porta nulla egestas varius. In commodo, augue ac finibus luctus, urna nibh viverra ante, id tempor justo justo ut purus.</p>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="tab-pane fade" id="nav-item-02" role="tabpanel">
+
+                            <div class="row">
+
+                                <div class="col-sm-6">
+
+                                    <div class="embed-responsive embed-responsive-4by3">
+                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jOQMJKiRcVc?list=RDjOQMJKiRcVc"></iframe>
+                                    </div>
+
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <p> Morbi euismod tempor diam, et mollis turpis mattis sit amet. Ut vehicula, mauris sit amet tempor sodales, magna odio tincidunt mi, et scelerisque nunc tortor vitae turpis. Ut pretium eros porta nulla egestas varius. In commodo, augue ac finibus luctus, urna nibh viverra ante, id tempor justo justo ut purus.</p>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="tab-pane fade" id="nav-item-03" role="tabpanel">
+
+                            <div class="row">
+
+                                <div class="col-sm-6">
+
+                                    <div class="embed-responsive embed-responsive-4by3">
+                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jOQMJKiRcVc?list=RDjOQMJKiRcVc"></iframe>
+                                    </div>
+
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <p> Morbi euismod tempor diam, et mollis turpis mattis sit amet. Ut vehicula, mauris sit amet tempor sodales, magna odio tincidunt mi, et scelerisque nunc tortor vitae turpis. Ut pretium eros porta nulla egestas varius. In commodo, augue ac finibus luctus, urna nibh viverra ante, id tempor justo justo ut purus.</p>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
         </div>
+
     </div>
 
     <!-- Modal -->
@@ -368,6 +456,9 @@
     </div>
 
     <!-- Optional JavaScript -->
+
+    <script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(97871)</script> 
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.js"></script>
