Ajustes em Cards row

--- a/index.html
+++ b/index.html
@@ -226,9 +226,12 @@
 
         </div>
 
-        <div class="row">
 
-            <div class="col-sm-6 col-md-6">
+        <!-- AULA 06 - CARDS -->
+        <div class="row justify-content-sm-center">
+
+            <!-- CARD 1 -->
+            <div class="col-sm-6 col-md-4 mb-5">
 
                 <div class="card mb-5">
 
@@ -252,8 +255,8 @@
                 </div>
 
             </div>
-
-            <div class="col-sm-6 col-md-6">
+            <!-- CARD 2 -->
+            <div class="col-sm-6 col-md-4 mb-5">
 
                 <div class="card mb-5">
 
@@ -277,8 +280,8 @@
                 </div>
 
             </div>
-
-            <div class="col-sm-6 col-md-6">
+            <!-- CARD 3 -->
+            <div class="col-sm-6 col-md-4 mb-5">
 
                 <div class="card mb-5">
 
@@ -293,6 +296,7 @@
                         <li class="list-group-item">Iaculis eu non diam</li>
                         <li class="list-group-item">Phasellus egestas</li>
                     </ul>
+                    <!-- alert modal -->
                     <div class="card-body">
                         <a href="#" class="card-link" data-toggle="modal" data-target="#siteModal">Donec</a>
                         <a href="#" class="card-link">Saiba mais</a>
@@ -545,11 +549,22 @@
 
                 <h3>Social</h3>
 
-                <div class="btn-group btn-group-vertical" role="group">
-                    <a class="btn btn-primary" href="#">Facebook</a>
-                    <a class="btn btn-info" href="#">Linkedin</a>
-                    <a class="btn btn-warning" href="#">Instagram</a>
+                <div class="btn btn-group-vertical btn-block btn-group-lg" role="group">
+                    <a class="btn btn-outline-primary" href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</a>
+                    <a class="btn btn-outline-info" href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i> Linkedin</a>
+                    <a class="btn btn-outline-warning" href="#"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
                 </div>
+
+            </div>
+
+            <div class="col-12 mt-5">
+
+                <blockquote class="blockquote text-center">
+
+                    <p class="mb-0">O Sucesso não é garantido, mas o fracaso é certo se você não estiver emocionalmente envolvido em seu trabalho.</p>
+                    <footer class="blockquote-footer">Biz Stone <cite title="Source Title">Fundador do Twitter</cite></footer>
+
+                </blockquote>
 
             </div>
 
